--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,14 @@
 <html>
-	
-	
+<head>
+<title>Ruby on Rails Training App | Home</title>
+</head>
+<body>
+<h1>Home</h1>
+<p>
+This is the home page for the
+<a href="http://github.com/ezzie">Ruby on Rails Training</a>
+by Ezzie Infosystems.
+We will be building a Training App in the class
+</p>
+</body>
 </html>
